plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'est.oremi.backend12'
version = '0.0.1-SNAPSHOT'
description = 'BookingFresh'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}


dependencies {
    // ===================================
    // Spring Boot 기본 의존성
    // ===================================
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // ===================================
    // Security (회원/로그인)
    // ===================================
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // ===================================
    // Database
    // ===================================
    runtimeOnly 'org.postgresql:postgresql'
    implementation 'com.h2database:h2' // 로컬 테스트용

    // ===================================
    // Mail & Scheduler
    // ===================================
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-quartz' // 스케줄러 (배송 리마인더 등)
    implementation 'org.springframework.boot:spring-boot-starter-aop'    // @Async, AOP 기반 리트라이 등

    // ===================================
    // AWS (S3 업로드)
    // ===================================
    implementation 'software.amazon.awssdk:s3:2.25.38'
    implementation 'software.amazon.awssdk:auth:2.25.38'

    // ===================================
    // AI
    // ===================================
    implementation 'org.springframework.boot:spring-boot-starter-webflux'  // Alan API 통신
    implementation 'com.openai:openai-java:4.7.1'                           // OpenAI SDK
    implementation 'com.fasterxml.jackson.core:jackson-databind'            // JSON 파싱
    implementation 'com.fasterxml.jackson.module:jackson-module-jakarta-xmlbind-annotations'

    // ===================================
    // Lombok / 테스트
    // ===================================
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.mockito:mockito-core:5.12.0'

    // ===================================
    // JWT
    // ===================================
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // OpenAPI 문서화
    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8")
}


tasks.named('test') {
    useJUnitPlatform()
}
